# claude-projects

./: README.md
claude-eval-kit/: .gitignore  ENV_EXAMPLE.txt  Makefile  README.md  pyproject.toml
claude-eval-kit/.github/workflows/: ci.yml
claude-eval-kit/cases/suites/: multilingual_ko_en.jsonl  prompt_injection.jsonl  rag_core.jsonl  refusal.jsonl  tool_use.jsonl
claude-eval-kit/docs/: app_specific_eval_generation.md  evaluation_philosophy.md  how_to_add_cases.md  how_to_integrate_with_apps.md  scoring_rubrics.md
claude-eval-kit/evalkit/: __init__.py  cli.py  config.py  logging.py  types.py
claude-eval-kit/evalkit/adapters/: __init__.py  anthropic_messages.py  base.py  http_app.py  offline_stub.py
claude-eval-kit/evalkit/capture/: __init__.py  sanitization.py  token_estimator.py  trace_builder.py
claude-eval-kit/evalkit/generators/: __init__.py  generate_cases.py  models.py  prompt_builder.py  validators.py
claude-eval-kit/evalkit/reporting/: __init__.py  aggregate.py  diff.py  gates.py  pilot_report.py  render_md.py
claude-eval-kit/evalkit/retrieval/: __init__.py  injection.py  scorers.py
claude-eval-kit/evalkit/runners/: __init__.py  runner.py
claude-eval-kit/pilot/: README.md  acceptance_gates.yaml  acceptance_gates_offline.yaml  eval_plan.md  success_criteria.md
claude-eval-kit/scripts/: compare_runs.py  seed_baseline.py
claude-eval-kit/tests/: test_adapter_resolution.py  test_deterministic_scoring.py  test_diff.py  test_gates.py  test_offline_run.py  test_pilot_report.py  test_scoring_mode.py  test_suite_loading.py
(+169 files in other folders)
