[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-eval-kit"
version = "0.1.0"
description = "Production evaluation framework for Claude-powered systems"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "rich>=13.0",
    "typer>=0.9",
    "httpx>=0.25",
    "anthropic>=0.25",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
evalkit = "evalkit.cli:app"

[tool.setuptools.packages.find]
include = ["evalkit*"]
